| Bug #22295 | ndb_config does not take -c as an option for connectstring | ||
|---|---|---|---|
| Submitted: | 13 Sep 2006 8:11 | Modified: | 2 Nov 2006 10:36 |
| Reporter: | Johan Andersson | ||
| Status: | Closed | ||
| Category: | Server: Cluster | Severity: | S3 (Non-critical) |
| Version: | * | OS: | Any (*) |
| Assigned to: | Hartmut Holzgraefe | Target Version: | |
[13 Sep 2006 23:40]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/11896 ChangeSet@1.2262, 2006-09-13 23:40:28+02:00, hartmut@mysql.com +1 -0 Make ndb_config use the same default options as any other ndb tool in the distribution (Bug #22295)
[10 Oct 2006 20:44]
Jonas Oreland
pushed into 5.1.12
[1 Nov 2006 15:47]
Jonas Oreland
pushed into 5.0.29, no fix in 4.1
[2 Nov 2006 10:36]
Jon Stephens
Thank you for your bug report. This issue has been committed to our source repository of
that product and will be incorporated into the next release.
If necessary, you can access the source repository and build the latest available version,
including the bug fix. More information about accessing the source trees is available at
http://dev.mysql.com/doc/en/installing-source.html
Documented feature enhancement for 5.0.29 & 5.1.12.
[4 Nov 2006 4:27]
Jon Stephens
*Fix for 5.0 documented in 5.0.30 Release Notes.*

Description: It is not possible to specify the connectstring using -c , which is possible for all other programs: ./ndb_config -c hostname ./ndb_config -? MySQL distrib 5.0.11-beta, for pc-linux-gnu (i686) -?, --usage Display this help and exit. -?, --help Display this help and exit. -V, --version Output version information and exit. --ndb-connectstring=name Set connect string for connecting to ndb_mgmd. Syntax: "[nodeid=<id>;][host=]<hostname>[:<port>]". Overides specifying entries in NDB_CONNECTSTRING and Ndb.cfg --nodes Print nodes -q, --query=name Query option(s) --host=name Host --type=name Type of node/connection --id=# Nodeid --nodeid=# Nodeid -f, --fields=name Field separator -r, --rows=name Row separator How to repeat: ./ndb_config -c yourfavoritehostname Suggested fix: add -c option