Make ndb_config use the same default options as any other ndb tool in the distribution (Bug #22295)